--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 paho-mqtt>=1.6.1
 python-dotenv>=1.0.0
 pytest>=7.0.0
+fastapi==0.110.1
+uvicorn[standard]==0.27.1
+cachetools==5.3.3
+pydantic==2.7.1
+email-validator==2.1.0.post1
