--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ pytest>=7.0.0
 fastapi==0.110.1
 uvicorn[standard]==0.27.1
 cachetools==5.3.3
-pydantic==2.7.1
+pydantic<2
 email-validator==2.1.0.post1
 aiofiles>=23.1.0
 httpx[http2]>=0.27.0
+python-multipart
+sqlite-utils
